--- a/src/asset/css/nextBoard.css
+++ b/src/asset/css/nextBoard.css
@@ -1,6 +1,6 @@
 /*게시판 글쓰기*/
 .writeForm {
-    @apply flex flex-col items-center w-full;
+    @apply flex flex-col items-center w-full text-black;
 }
 .writeForm > .tr {
     @apply py-2 w-full;
