--- a/src/asset/css/nextBoard.css
+++ b/src/asset/css/nextBoard.css
@@ -2,7 +2,7 @@
 .writeForm {
     @apply flex flex-col items-center w-full text-black;
 }
-.writeForm > .tr {
+.writeForm .tr {
     @apply py-2 w-full;
 }
 .writeForm .boardTitle {
